syntax = "proto3";

package com.dlvb.graphqlmoviecatalogue;

service MovieSearchService {
  rpc searchMovies(SearchRequest) returns (SearchResponse);
}

message SearchRequest {
  string query = 1;  // запрос на поиск
}

message SearchResponse {
  repeated Movie movies = 1;  // список фильмов
  repeated Genre genres = 2; // список жанров
}

message Movie {
  string id = 1;
  string title = 2;
  string description = 3;
  string genre_id = 4; // ссылка на жанр
}

message Genre {
  string id = 1;
  string name = 2;
}
